Fixing the header logo overlap

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,7 +11,7 @@ $masthead-link-color: #0f9862;
 	content: url("../images/JADES_horizontal_greens_onwhite_small.png");
 	display: inline-block;
 	position: relative;
-	width: 10px;
+	width: 100%;
 	top: 10px;
 	padding-right:60px;
     margin-right: 241px;
